--- a/dang-thats-delicious/views/editStore.pug
+++ b/dang-thats-delicious/views/editStore.pug
@@ -19,4 +19,4 @@ block content
 
     //- Usar el mixin
     //- Se pueden pasar datos como parametros
-    +storeForm({ name: 'Tim Hortons' })
+    +storeForm()
