--- a/dang-thats-delicious/views/mixins/_storeForm.pug
+++ b/dang-thats-delicious/views/mixins/_storeForm.pug
@@ -4,12 +4,19 @@ mixin storeForm(store = {})
   //- "store.name" contiene el valor que le hayan pasado al mixin al invocarlo
   //- p Store: #{store.name}
 
-  form(action=`/add/${store._id || ''}` method="POST" class="card")
+  //- enctype="multipart-/form-data" permite enviar archivos en el formulario
+  form(action=`/add/${store._id || ''}` method="POST" class="card" enctype="multipart/form-data")
+    pre= h.dump(store)
     //- los atributos "name" deben coincidir con los definidos en el schema definido en "/models/Store.js"
     label(for="name") Name
     input(type="text" name="name" value=store.name)
     label(for="description") Description
     textarea(name="description")= store.description
+    //- Image upload
+    label(for="photo") Photo
+      input(type="file" name="photo" id="photo" accept="image/gif, image/png, image/jpeg")
+      if store.photo
+        img(src=`/uploads/${store.photo}`, alt=store.name width=200)
     //- Address long and lat
     label(for="address") Address
     input(type="text" id="address" name="location[address]" value=(store.location && store.location.address))
